# OpenROAD

./: BUILD.bazel  tclint.toml
bazel/: build_helper.bzl
include/ord/: Design.h  OpenRoad.hh
src/: CMakeLists.txt  Design.cc  OpenRoad.cc  OpenRoad.i
src/epl/: .gitignore  CMakeLists.txt
src/epl/include/epl/: Cell.h  EPlace.h  FlipFlop.h  GridDensity.h  MakeEPlace.h
src/epl/src/: Cell.cpp  EDensity.cpp  EDensity.h  EPlace-py.i  EPlace.cpp  EPlace.i  EPlace.tcl  Graphics.cpp  Graphics.h  Grid.cpp  Grid.h  GridDensity.cpp  GridDensity.h  MakeEPlace.cpp  Nesterov.cpp  Nesterov.h  WAwirelength.cpp  WAwirelength.h
src/epl/test/: CMakeLists.txt  gcd-simulated_annealing.tcl  medium01.tcl  simple01-random.defok  simple01-random.ok  simple01-random.tcl  simple01-simulated_annealing.tcl  simple01.defok  simple01.ok  simple01.tcl  wa-hpwl.tcl
src/epl/test/ispd2006/: adaptec1.tcl  adaptec1_macro.lef  newblue1.tcl  newblue1_gpl.tcl  newblue1_macro.lef
src/gpl/: BUILD  CMakeLists.txt
src/gpl/include/gpl/: fft.h  nesterovBase.h  placerBase.h
src/gpl/src/: fft.cpp  fftsg.cpp  fftsg2d.cpp  graphics.cpp  graphicsImpl.cpp  initialPlace.cpp  mbff.cpp  nesterovBase.cpp  nesterovBase.h  nesterovPlace.cpp  nesterovPlace.h  placerBase.cpp  replace.cpp  routeBase.cpp  solver.h  timingBase.cpp
src/gui/src/: chartsWidget.cpp  chartsWidget.h  staGuiInterface.cpp  staGuiInterface.h
src/odb/include/odb/: db.h
src/odb/src/db/: dbBlock.h  dbInst.cpp  dbMarkerCategory.cpp
src/pdn/test/: power_switch.tcl
src/upf/: README.md
src/upf/src/: upf.tcl
src/upf/test/: CMakeLists.txt  upf_version.ok  upf_version.tcl
src/upf/test/data/mpd_top/: mpd_top_combined.upf
src/utl/include/utl/: Logger.h
test/: CMakeLists.txt  flow.tcl  upf_aes.tcl
test/sky130hd/: sky130hd.pdn.tcl
test/upf/: mdp_aes.pdn.tcl  mpd_aes.upf
